--- a/rpz/12-intro.tex
+++ b/rpz/12-intro.tex
@@ -6,5 +6,5 @@
 	\item выбрать алгоритмы машинной графики, с помощью которых будет визуализирована трёхмерная сцена и построена анимация;
 	\item выбрать метод для визуализации мышц;
 	\item спроектировать архитектуру программы и структуры данных для хранения модели;
-	\item реализовать выбранные алгоритмы;
+	\item реализовать выбранные алгоритмы.
 \end{itemize}
