--- a/rpz/40-impl.tex
+++ b/rpz/40-impl.tex
@@ -4,9 +4,8 @@
 
 \section{Средства реализации}
 \label{sec:realisation}
-В качестве языка программирования был выбран Python так как это мощный объектно-ориентированный язык, с которым я был знаком, что сократит время написания программы и упростит разработку.
-\par В качестве среды разработки была выбрана "PyCharm Community Edition", а для представления пользовательского интерфейса библиотека PyQt5.
-
+В качестве языка программирования был выбран Python~\cite{python} по скольку это объектно-ориентированный язык, рассматриваемый во время учёбы, что значительно сокращает время написания программы и упрощает разработку.
+\par В качестве среды разработки была выбрана "PyCharm Community Edition"\!,  а для представления пользовательского интерфейса библиотека PyQt5~\cite{pyqt}.
 \section{Описание структуры программы}
 \label{sec:structure}
 \paragraph{Описание основных модулей программы}
@@ -28,7 +27,7 @@
 	\item visualizer.py -- содержит методы, отвечающие за взаимодействие с drawer-ом;
 	\item musclemodel.py -- содержит класс эллипсоида, прямой мышцы и сложной мышцы;
 \end{itemize}
-На рисунке \ref{fig:scheme} представлена диаграмма классов, из неё видно разделение на отдельные модули, что позволяет изменять и дополнять некоторые из них независимо от других, благодаря чему программу будет проще обновлять при необходимости.
+\par На рисунке \ref{fig:scheme} представлена диаграмма классов, из неё видно разделение на отдельные модули, что позволяет изменять и дополнять некоторые из них независимо от других, благодаря чему программу будет проще обновлять при необходимости.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=0.35\paperheight, angle=90]{images/scheme}
@@ -261,9 +260,9 @@
 	\caption{Интерфейс программы}
 	\label{fig:wholeinterface}
 \end{figure}
-Интерфейс включает в себя блок взаимодействия с источниками свет и блок взаимодействия с моделью. Первый, представленный на рисунке \ref{fig:lights}, предоставляет возможности:
+Интерфейс включает в себя блок взаимодействия с источниками света и блок взаимодействия с моделью. Первый, представленный на рисунке \ref{fig:lights}, предоставляет возможности:
 \begin{itemize}
-	\item передвинуть источник света в одном из 3 направлений;
+	\item передвинуть источник света по одной из 3 осей;
 	\item добавить новый источник света, задав его интенсивность и координаты.
 \end{itemize}
 \begin{figure}[H]
