--- a/rpz/80-conclusion.tex
+++ b/rpz/80-conclusion.tex
@@ -1,2 +1,4 @@
 \Conclusion % заключение к отчёту
-
+В ходе выполнения курсовой работы были проанализированы существующие алгоритмы удаления невидимых линий, морфинга, освещения и закраски, рассмотрены методы аппроксимации мышц с целью анимации их сокращения и моделирования. Из них были выбраны и реализованы наиболее подходящие для решения поставленной задачи. Было разработано программное обеспечение для визуализации мышечных сокращений.
+\par Реализованная программа предоставляет пользователю возможность наблюдать как изотоническое, так и изометрическое сокращение мышц, задавая степень изменения длины или напряжённости, загружать модель из файла, вращать и перемещать её, добавлять и перемещать источники света.
+\par В качестве перспектив дальнейшего развития можно предположить добавление новых моделей мышц, возможности редактирования параметров загруженной модели, улучшение реалистичности изображения путём изменения метода закраски на метод Гуро или Фонга, или путём наложения текстур на мышцы.
