--- a/rpz/preamble.inc.tex
+++ b/rpz/preamble.inc.tex
@@ -15,7 +15,9 @@ citecolor=black, menucolor=black, filecolor=black,
 \usepackage{pgfplots}
 \usepackage{nomencl}
 
+\usepackage{rotating}
 \usepackage{float}
+\usepackage{indentfirst}
 
 \AfterHyperrefFix
 
