--- a/rpz/rpz.bib
+++ b/rpz/rpz.bib
@@ -152,11 +152,34 @@
 	language = {english}
 }
 
-
 @online{morphing,
 	title = {3D Morphing [Электронный ресурс]},
 	year = {2001},
 	url = {http://web.mit.edu/manoli/morph/www/morph.html#morphing},
 	urldate = {17.07.2020},
+	language = {russian}
+}
+
+@online{pyqt,
+	title = {Qt for Python Documentation [Электронный ресурс]},
+	year = {2021},
+	url = {https://doc.qt.io/qtforpython/api.html#basic-modules},
+	urldate = {14.02.2021},
+	language = {russian}
+}
+
+@online{python,
+	title = {Python 3.7.9 documentation [Электронный ресурс]},
+	year = {2020},
+	url = {https://docs.python.org/3.7/index.html},
+	urldate = {14.02.2021},
+	language = {russian}
+}
+
+@online{pbr,
+	title = {Описание принципов PBR: какие правила оптики учитывает физически-корректный рендеринг [Электронный ресурс]},
+	year = {2019},
+	url = {https://dtf.ru/gamedev/81762-opisanie-principov-pbr-kakie-pravila-optiki-uchityvaet-fizicheski-korrektnyy-rendering},
+	urldate = {19.02.2021},
 	language = {russian}
 }
