--- a/rpz/rpz.tex
+++ b/rpz/rpz.tex
@@ -25,7 +25,7 @@
 \frontmatter % выключает нумерацию ВСЕГО; здесь начинаются ненумерованные главы: реферат, введение, глоссарий, сокращения и прочее.
 
 %\maketitle %создает титульную страницу
-%\afterpage{\blankpage}\afterpage{\blankpage}\afterpage{\blankpage}
+\afterpage{\blankpage}
 % пропущены страницы под тз и план (у меня их 2 тз и 1 план, итого 3, вам надо пропустить столько, сколько страниц у вас в тз и плане)
 
 
@@ -53,11 +53,11 @@
 \include{20-analysis}
 \include{30-design}
 \include{40-impl}
-%\include{50-research}
+\include{50-research}
 
 \backmatter %% Здесь заканчивается нумерованная часть документа и начинаются ссылки и
             
-%\include{80-conclusion}%% заключение
+\include{80-conclusion}%% заключение
 
 
 \include{81-biblio}
